[Mac] Dismiss the first run bubble when the user starts typing.

The "You can search from here with Google" first run bubble is a child
window of the browser window, and is made key because it contains a
button (so you can press the button via accessibility). All of this is
fine, except the omnibox is the browser window's first responder and
displays a focus ring. So, to the user it looks like they can start
typing (and indeed, the bubble invites them to "Type to search or
enter a URL to navigate...."), but the bubble consumes all key events.
This is a jarring experience for a first-time Chrome Mac user.

This cl changes the first run bubble to dismiss itself when the user
starts typing.

R=avi@chromium.org
BUG=657592

Review-Url: https://codereview.chromium.org/2951013002
Cr-Commit-Position: refs/heads/master@{#481073}

Former-commit-id: 96db21c3f062509bb04eb8b2c505acf96326eb36