chrome/browser/ui/cocoa/first_run_bubble_controller.h
@@ -8,10 +8,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #import <Cocoa/Cocoa.h>
 
+#import "base/mac/scoped_nsobject.h"
 #import "chrome/browser/ui/cocoa/base_bubble_controller.h"
 
 class Browser;
 class Profile;
+@class FirstRunKeyResponder;
 
 // Manages the first run bubble.
 @interface FirstRunBubbleController : BaseBubbleController {
@@ -19,6 +21,7 @@ class Profile;
   IBOutlet NSTextField* header_;
   Browser* browser_;
   Profile* profile_;
+  base::scoped_nsobject<FirstRunKeyResponder> keyResponder_;
 }
 
 // Creates and shows a first run bubble. |browser| is NULL in unittests.
